HACK: enable support for tflite GPU delegate on GNU/Linux
Compiled with:

    bazel build -c opt --copt -DMESA_EGL_NO_X11_HEADERS --copt -DEGL_NO_X11 //tensorflow/lite/tools/benchmark:benchmark_model

This is not intended to be merged in its current state.

--- a/tensorflow/lite/delegates/gpu/BUILD
+++ b/tensorflow/lite/delegates/gpu/BUILD
@@ -38,7 +38,9 @@ cc_library(
             # https://source.android.com/compatibility/10/android-10-cdd#7_1_4_1_opengl_es
             "-lGLESv2",
         ],
-        "//conditions:default": [],
+        "//conditions:default": [
+          "-lEGL",
+        ],
     }),
     deps = [
         "@com_google_absl//absl/base:core_headers",
@@ -130,6 +132,7 @@ cc_binary(
         "//tensorflow:windows": [],
         "//conditions:default": [
             "-fvisibility=hidden",
+            "-lEGL",
         ],
     }),
     linkshared = 1,
